# QC

./: .gitignore  .mcp.json  README.md  assignment.md  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.claude/docs/: ROADMAP.md  agentic-engineering.md  architecture.md  design-patterns.md  product-design.md  test.md
examples/: aloha_basic.yaml  demo.ipynb
plugins/robotq/: .mcp.json
plugins/robotq/.claude-plugin/: plugin.json
plugins/robotq/commands/: augment.md  configure.md  inspect.md  preview.md
plugins/robotq/skills/augment/: SKILL.md
plugins/robotq/skills/configure/: SKILL.md
plugins/robotq/skills/inspect/: SKILL.md
plugins/robotq/skills/preview/: SKILL.md
plugins/robotq/skills/robotq/: SKILL.md
robotq/: __init__.py
robotq/adapters/: aloha.py  base.py  generic.py
robotq/cli/: main.py
robotq/core/: config.py  episode.py  pipeline.py  transform.py
robotq/core/augmentations/: background.py  color.py  mirror.py  noise.py  speed.py
robotq/io/: loader.py  schema.py  video.py  writer.py
robotq/mcp/: __main__.py  server.py
skill/: robotq.md
tests/: conftest.py
tests/unit/: test_adapter.py  test_background.py  test_color.py  test_config.py  test_episode.py  test_loader.py  test_mcp.py  test_mirror.py  test_noise.py  test_pipeline.py  test_schema.py  test_speed.py  test_transform.py  test_video.py  test_writer.py
